...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <ImageView
        android:id="@+id/MenuLogoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/book_cover"
        android:elevation="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/guidelineH4"
...
        app:layout_constraintStart_toEndOf="@id/guidelineV2"
        app:layout_constraintTop_toBottomOf="@id/guidelineH1"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/livra_logo_complete" />

    <ImageView
        android:id="@+id/MenuNameView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/book_cover"
        android:elevation="5dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/guidelineH3"
...
        app:layout_constraintStart_toEndOf="@id/guidelineV4"
        app:layout_constraintTop_toBottomOf="@id/guidelineH2"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/logo_app" />

    <GridLayout
        android:id="@+id/MenuGridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH5"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/LibraryCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
...
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/TextDetectorCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
...
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/SavedItemsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
...
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/AlphaGameCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
...
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/AddBookCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
...
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/SettingsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="?attr/colorPrimaryDark"
...
