...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebrowse" />

    <Button
        android:id="@+id/uploadbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_button_two"
        android:padding="12dp"
...
